2015-04-03  Benno Schulenberg  <bensberg@justemail.net>
	* README: Update text to the fifth milestone: 2.4.x, plus tweaks.

2015-03-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (search_init_globals, search_replace_abort),
	src/winio.c (edit_redraw), src/proto.h, src/global.c: When finding
	an off-screen string, put it on the center line of the screen and
	not on the bottom or top line.  This restores the old behaviour
	that was unintentionally changed in r5149 six days ago.
	* src/winio.c (edit_refresh): When pasting lines on the bottom line,
	only scroll the required number of lines and not half a screen --
	that is, when smooth scrolling is enabled.
	* doc/syntax/changelog.nanorc: Also colour a series of changed files
	that spans more than one line.

2015-03-27  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_alt_speller): Adjust the end point of the marked
	region for any change in length of the region's last line.

2015-03-27  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/patch.nanorc: Recognize also Debian package diffs.
	Fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1300565
	requested by Rolf Leggewie.
	* src/search.c (do_replace_loop): Adjust some whitespace and wrapping.
	* src/search.c (do_replace_loop): Place a call to edit_refresh better,
	and remove two unneeded ones.  This greatly speeds up nano when doing
	a Replace All with *lots* of occurrences.
	* src/{color,global,nano,text,utils}.c: Normalize some whitespace.
	* src/global.c (strtosc): The linter is only available when colour is.
	* src/global.c, src/text.c: Treat the formatter like a speller,	to fix
	compilation with --disable-speller.  Fixes Savannah bug #44607.

2015-03-25  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/debian.nanorc: Slightly widen and relax the header regex.
	* doc/syntax/python.nanorc: Hashes inside triple-quoted strings should
	not cause comment colouring.  (Inside single-qouted strings neither,